<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_lang"
            android:icon="@drawable/ic_action_lang"
            android:title="@string/menu_lang" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_action_privacy"
            android:title="@string/menu_privacy" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_action_rate"
            android:title="@string/menu_rate" />
    </group>
</menu>