<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66121212">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/framlayoutAds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/exit_app"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black_color"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:layout_gravity="center_horizontal"
                android:text="@string/do_you_realy_want_to_exit"
                android:textColor="@color/black_color"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:background="@drawable/gr_btn"
                    android:text="@string/no"
                    android:textColor="@color/white_color"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:background="@drawable/gr_btn"
                    android:text="@string/yes"
                    android:textColor="@color/white_color"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
